[package]
name = 'pallet-order'
version = "0.1.0"
license = "Apache-2.0"
authors = ["Alkaid <alkaidwe@gmail.com>"]
edition = '2018'

[dependencies]
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
log = { version = "0.4.14", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-proxy = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-benchmarking = { version = "3.0.0", default-features = false, optional = true }
primitives = { package = "polka-domain-primitives", path = "../../primitives", default-features = false }
nft = { package = "pallet-nft", path = "../nft", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

orml-currencies = { default-features = false }
orml-tokens = { default-features = false }
orml-traits = { default-features = false }
orml-nft = { default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

[features]
default = ['std']
std = [
	"serde",
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'pallet-proxy/std',
	'pallet-balances/std',
	'primitives/std',
	'nft/std',
	"orml-tokens/std",
	"orml-traits/std",
	"orml-nft/std",
	"sp-std/std",
	"sp-runtime/std",
]
