[package]
authors = ['Anonymous']
edition = '2018'
name = 'pallet-template'
version = "2.0.0"
license = "Unlicense"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet template for defining custom runtime logic."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }

[dependencies.frame-support]
default-features = false
version = "3.0.0"

[dependencies.frame-system]
default-features = false
version = "3.0.0"

[dependencies.frame-benchmarking]
default-features = false
version = "3.1.0"
optional = true

[dev-dependencies]
serde = { version = "1.0.124" }

[dev-dependencies.sp-core]
default-features = false
version = "3.0.0"

[dev-dependencies.sp-io]
default-features = false
version = "3.0.0"

[dev-dependencies.sp-runtime]
default-features = false
version = "3.0.0"

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
